--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "author": "Kerwin",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.6.3"
+    "express-winston": "^4.2.0",
+    "helmet": "^6.0.1",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.3",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "eslint": "^8.23.1",
