--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && scp -r ./build/* kerwindows.students.nomoredomainssbs.ru:/home/kerwindows/frontend" 
   },
   "eslintConfig": {
     "extends": [
